--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="en">
     <head>
-        <title>Title</title>
+        <title>Developer Portfolio (Sione Yerkovich)</title>
         <!-- Required meta tags -->
         <meta charset="utf-8" />
         <meta
@@ -16,13 +16,44 @@
             integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN"
             crossorigin="anonymous"
         />
+        <!--Bootstrap stylesheets included below-->
+        <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+        <link rel="stylesheet"  href="https://bootswatch.com/5/cyborg/bootstrap.min.css"
+        />
     </head>
 
-    <body>
+    <body class="bg-light">
         <header>
-            <!-- place navbar here -->
+            <!-- navbar here (TO BE COMPLETED) -->
+            <nav class="height navbar fixed-top navbar-expand-lg" data-bs-theme="dark" aria-label="navigation bar">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="#">Navbar</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" style="border-radius: 5px;"id="navbarColor01">
+                        <ul class="navbar-nav mx-5 my-3">
+                            <li class="nav-item">
+                                <a class="nav-link active bold-text" href="index.html" style="color: white; font-size: 20px; padding-inline: 40px;">About Me
+                                </a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link bold-text" href="course.html" style="color: white; font-size: 20px; padding-inline: 40px;">Experience</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link bold-text" href="course.html" style="color: white; font-size: 20px; padding-inline: 40px;">Projects</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link bold-text" href="contact.html" style="color: white; font-size: 20px; padding-inline: 40px;">Contact Me</a>
+                            </li>
+
+                        </ul>
+                    </div>
+                </div>
+            </nav>
         </header>
-        <main></main>
+        <main>
+        </main>
         <footer>
             <!-- place footer here -->
         </footer>
