--- a/index.html
+++ b/index.html
@@ -25,26 +25,26 @@
     <body class="bg-light">
         <header>
             <!-- navbar here (TO BE COMPLETED) -->
-            <nav class="height navbar fixed-top navbar-expand-lg" data-bs-theme="dark" aria-label="navigation bar">
+            <nav class="navbar fixed-top navbar-expand-lg border-bottom border-secondary my-2" data-bs-theme="dark" aria-label="navigation bar">
                 <div class="container-fluid">
-                    <a class="navbar-brand" href="#">Navbar</a>
+                    <a class="navbar-brand ms-5" href="#"><img src="../Images/yerkovich logo.PNG" class="img-fluid" width="170" alt="Yerkovich Logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse" style="border-radius: 5px;"id="navbarColor01">
-                        <ul class="navbar-nav mx-5 my-3">
-                            <li class="nav-item">
-                                <a class="nav-link active bold-text" href="index.html" style="color: white; font-size: 20px; padding-inline: 40px;">About Me
+                    <div class="collapse navbar-collapse ms-5 mt-2"id="navbarColor01">
+                        <ul class="navbar-nav">
+                            <li class="nav-item me-3">
+                                <a class="nav-link active bold-text" href="index.html" style="color: white;">About Me
                                 </a>
                             </li>
-                            <li class="nav-item">
-                                <a class="nav-link bold-text" href="course.html" style="color: white; font-size: 20px; padding-inline: 40px;">Experience</a>
+                            <li class="nav-item me-3">
+                                <a class="nav-link bold-text" href="#" style="color: white;">Experience</a>
+                            </li>
+                            <li class="nav-item me-3">
+                                <a class="nav-link bold-text" href="#" style="color: white;">Projects</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link bold-text" href="course.html" style="color: white; font-size: 20px; padding-inline: 40px;">Projects</a>
-                            </li>
-                            <li class="nav-item">
-                                <a class="nav-link bold-text" href="contact.html" style="color: white; font-size: 20px; padding-inline: 40px;">Contact Me</a>
+                                <a class="nav-link bold-text" href="#" style="color: white;">Contact Me</a>
                             </li>
 
                         </ul>
