Added hero section with buttons and image section. Add an image for testing and finalize colour.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
     <body class="bg-light">
         <header>
-            <!-- navbar here (TO BE COMPLETED) -->
+            <!-- navbar here (COMPLETED) -->
             <nav class="navbar fixed-top navbar-expand-lg border-bottom border-secondary my-2" data-bs-theme="dark" aria-label="navigation bar">
-                <div class="container-fluid">
+                <div class="container-fluid mb-3">
                     <a class="navbar-brand ms-5" href="#"><img src="../Images/yerkovich logo.PNG" class="img-fluid" width="170" alt="Yerkovich Logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
@@ -52,7 +52,31 @@
                 </div>
             </nav>
         </header>
+
         <main>
+            <!-- Hero section with profile image. (Colours to be completed and spacing)-->
+            <div class="container">
+
+                <div class="col-xs-12" style="height:200px;">
+                  </div>
+
+                <div class="card border-0 bg-light">
+                  <div class="row g-0">
+                    <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-3 col-xl-2">
+                    <img src="#" alt="Profile Picture" class="card-img-top" style="border-radius: 1000px">
+                    </div>
+                <div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-9 col-xl-10 text-center">
+                  <div class="card-body">
+                    <h3 class="card-title mb-3" style="color: white">Sione Yerkovich</h3>
+                    <h5 class="card-title mb-5">Student Developer</h5>
+                    <button type="button" class="btn btn-info me-3">Light</button>
+                    <button type="button" class="btn btn-dark btn-outline-info text-white">Light</button>
+                  </div>
+                </div>
+                  </div>
+                </div>
+
+          </div>
         </main>
         <footer>
             <!-- place footer here -->
