Completed responsiveness and sizing for all viewports. MUST ADD REAL IMAGE LATER. Colour scheme added to buttons. Section considered finalized however open to future edits.

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
-                    <div class="collapse navbar-collapse ms-5 mt-2"id="navbarColor01">
+                    <div class="collapse navbar-collapse ms-5 mt-2" id="navbarColor01">
                         <ul class="navbar-nav">
                             <li class="nav-item me-3">
                                 <a class="nav-link active bold-text" href="index.html" style="color: white;">About Me
@@ -54,23 +54,23 @@
         </header>
 
         <main>
-            <!-- Hero section with profile image. (Colours to be completed and spacing)-->
+            <!-- Hero section with profile image. (Colours to be completed and spacing )-->
             <div class="container">
 
                 <div class="col-xs-12" style="height:200px;">
                   </div>
 
                 <div class="card border-0 bg-light">
-                  <div class="row g-0">
-                    <div class="col-12 col-xs-12 col-sm-12 col-md-4 col-lg-3 col-xl-2">
-                    <img src="#" alt="Profile Picture" class="card-img-top" style="border-radius: 1000px">
+                  <div class="ms-lg-5 row g-0">
+                    <div class="col-12 col-xs-12 col-sm-12 col-md-6 col-lg-4 col-xl-4">
+                    <img src="../Images/Portfolio test image.jpg" alt="Profile Picture" class="card-img-top" style="border-radius: 1000px">
                     </div>
-                <div class="col-12 col-xs-12 col-sm-12 col-md-8 col-lg-9 col-xl-10 text-center">
-                  <div class="card-body">
-                    <h3 class="card-title mb-3" style="color: white">Sione Yerkovich</h3>
+                <div class="pt-xxl-5 col-12 col-xs-12 col-sm-12 col-md-6 col-lg-8 col-xl-8 text-center">
+                  <div class="card-body pt-4 mt-5">
+                    <h2 class="card-title mb-3" style="color: white">Sione Yerkovich</h2>
                     <h5 class="card-title mb-5">Student Developer</h5>
-                    <button type="button" class="btn btn-info me-3">Light</button>
-                    <button type="button" class="btn btn-dark btn-outline-info text-white">Light</button>
+                    <button type="button" class="btn btn-info me-3">Download CV</button>
+                    <button type="button" class="btn btn- btn-outline-info text-white">Contact Me</button>
                   </div>
                 </div>
                   </div>
