--- a/index.html
+++ b/index.html
@@ -102,23 +102,23 @@
             </div>
 
             <div class="container">
-                <div class="row gy-5">
+            <div class="row gy-5">
             <!-- Experience Card -->
                 <div class="col-md-6 col-sm-12 text-center">
-                    <div class="card bg-black" style="border-radius: 15px">
+                    <div class="card border-info" style="border-radius: 15px">
                         <h3 class="mt-4 text-info"><i class="bi bi-award"></i></h3>
                         <h5 class="mb-4">Experience</h5>
-                        <p class="mb-1" style="color: rgb(255, 255, 255)">2 Years</p>
-                        <p class="" style="color: rgb(255, 255, 255)">Frontend & Backend Development</p>
+                        <p class="mb-1" style="color: white">2 Years</p>
+                        <p style="color: white">Frontend & Backend Development</p>
                     </div>
                 </div>
             <!-- Education Card -->
                 <div class="col-md-6 col-sm-12 text-center">
-                    <div class="card bg-black" style="border-radius: 15px">
+                    <div class="card border-info" style="border-radius: 15px">
                         <h3 class="mt-4 text-info"><i class="bi bi-book"></i></h3>
                         <h5 class="mb-4">Education</h5>
-                        <p class="mb-1" style="color: rgb(255, 255, 255)">Diploma of Information Sciences</p>
-                        <p style="color: rgb(255, 255, 255)">Diploma of Software Development (current)</p>
+                        <p class="mb-1" style="color: white">Diploma of Information Sciences</p>
+                        <p style="color: white">Diploma of Software Development (current)</p>
                     </div>
                 </div>
             <!-- Descriptive text -->
@@ -129,7 +129,46 @@
             </div>
         </div>
 
-        <img src="./Images/down arrows modern purple.PNG" width="50" alt="Arrow icon" class="icon arrow ms-5 mt-5 pt-5" onclick="location.href='./#experience'">
+        <img src="./Images/down arrows modern purple.PNG" width="50" alt="Arrow icon" class="icon arrow ms-5 mt-5 pt-5 mb-5" onclick="location.href='./#experience'">
+        </section>
+
+        <div class="col-xs-12" style="height:200px;">
+        </div>
+        <!-- Experience section -->
+        <section id="experience">
+            <div class="container text-center mb-5 pb-5">
+                <p class="mb-1 lead">Explore my</p>
+                <h2>Experience</h2>
+            </div>
+
+        <div class="container">
+            <div class="col-sm-12 col-md-12 text-center">
+                <div class="card border-info" style="border-radius: 15px">
+                    <h5 class="mb-4 mt-4 pb-sm-4">Frontend Development</h5>
+                        <div class="row mb-5 gy-5">
+                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-info me-2"></i>Bootstrap</h5>
+                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-info me-2"></i>HTML</h5>
+                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-info me-2"></i>CSS</h5>
+                        </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="container mt-5 mb-5">
+            <div class=" col-sm-12 col-md-12 text-center">
+                <div class="card border-info" style="border-radius: 15px">
+                    <h5 class="mb-4 mt-4 pb-sm-4">Backend Development</h5>
+                        <div class="row mb-5 gy-5">
+                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-info me-2"></i>C#</h5>
+                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-info me-2"></i>SQL</h5>
+                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-info me-2"></i>.NET</h5>
+                        </div>
+                </div>
+            </div>
+        </div>
+
+        <img src="./Images/down arrows modern purple.PNG" width="50" alt="Arrow icon" class="icon arrow ms-5 mt-5 pt-5 mb-5" onclick="location.href='./#experience'">
+    </section>
         </section>
 
         <div class="col-xs-12" style="height:200px;">
