Style 1. Added text to tracking arrows in order to enhance UI. 2. Made font larger for personal details text in "About Me" section. Improves readability on larger viewports without being aggressive on mobile.

--- a/index.html
+++ b/index.html
@@ -123,13 +123,16 @@
                 </div>
             <!-- Descriptive text -->
                 <div class="text-center col-12 mt-5 p-5">
-                    <p class="mt-5 fst-italic text-white">Based in South Auckland, I'm a developer passionate about building streamlined applications with user friendly design and innate functionality. 
+                    <p class="fst-italic text-white lead">Based in South Auckland, I'm a developer passionate about building streamlined applications with user friendly design and innate functionality. 
                         I have a knack for design, UI/UX experience and logical problem solving. My point of difference is my interpersonal & leadership skills, and my ability to generate results under pressure. </p>
                 </div>
             </div>
         </div>
 
-        <img src="./Images/down arrows modern purple.PNG" width="50" alt="Arrow icon" class="icon arrow ms-5 mt-5 pt-5 mb-5" onclick="location.href='./#experience'">
+        <div class="container-fluid">
+            <img src="./Images/down arrows modern purple.PNG" width="50" alt="Arrow icon" class="icon arrow ms-5 mt-5 mb-5" onclick="location.href='./#experience'">
+            <span class="text-white fst-italic">Explore Experience</span>
+        </div>
         </section>
 
         <div class="col-xs-12" style="height:200px;">
@@ -167,8 +170,10 @@
             </div>
         </div>
 
-        <img src="./Images/down arrows modern purple.PNG" width="50" alt="Arrow icon" class="icon arrow ms-5 mt-5 pt-5 mb-5" onclick="location.href='./#experience'">
-    </section>
+        <div class="container-fluid">
+            <img src="./Images/down arrows modern purple.PNG" width="50" alt="Arrow icon" class="icon arrow mt-5 ms-5 mb-5" onclick="location.href='./#experience'">
+            <span class="text-white fst-italic">Browse Projects</span>
+        </div>
         </section>
 
         <div class="col-xs-12" style="height:200px;">
