--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <body class="bg-light">
         <header>
-            <!-- navbar here (COMPLETED) -->
+        <!-- navbar here (COMPLETED) -->
             <nav class="navbar bg-body-light navbar-expand-md border-bottom border-secondary my-2" data-bs-theme="dark" aria-label="navigation bar">
                 <div class="container-fluid mb-3">
                     <a class="navbar-brand ms-5" href="#"><img src="../Images/yerkovich logo.PNG" class="img-fluid" width="170" alt="Yerkovich Logo"></a>
@@ -54,7 +54,7 @@
         </header>
 
         <main>
-            <!-- Hero section with profile image. (Colours to be completed and spacing )-->
+        <!-- Hero section with profile image (REPLACE WITH GENUINE IMAGE)-->
         <section id="Profile">
             <div class="container">
 
@@ -63,17 +63,17 @@
 
                 <div class="card border-0 bg-light">
                   <div class="ms-lg-5 row g-0">
-            <!-- Profile card -->
+        <!-- Profile card -->
                     <div class="col-12 col-xs-12 col-sm-12 col-md-6 col-lg-5 col-xl-5">
                     <img src="../Images/Portfolio test image.jpg" alt="Profile Picture" class="card-img-top" style="border-radius: 1000px">
                     </div>
                 <div class="pt-xxl-5 col-12 col-xs-12 col-sm-12 col-md-6 col-lg-7 col-xl-7 text-center">
                   <div class="card-body pt-4 mt-5">
                     <h2 class="card-title mb-3" style="color: white">Sione Yerkovich</h2>
-                    <h5 class="card-title mb-5">Student Developer</h5>
+                    <h5 class="card-title mb-5 text-primary">Student Developer</h5>
                     <button type="button" class="btn btn-info btn-lg me-3">Download CV</button>
                     <button type="button" class="btn btn- btn-outline-info btn-lg text-white">Contact Me</button>
-                    <!-- ATTENTION. MUST ADD HREF TO LINKS BELOW -->
+        <!-- ATTENTION. MUST ADD HREF TO LINKS BELOW -->
                       <div>
                         <a href="#" target="_blank"><btn type="button" class="text-white mt-3 ms-4 me-4" style="font-size: 2rem" alt="LinkedIn link icon">
                           <i class="bi bi-linkedin"><span class="visually-hidden">Facebook Icon</span></i>
@@ -103,7 +103,7 @@
 
             <div class="container">
             <div class="row gy-5">
-            <!-- Experience Card -->
+        <!-- Experience Card -->
                 <div class="col-md-6 col-sm-12 text-center">
                     <div class="card border-info" style="border-radius: 15px">
                         <h3 class="mt-4 text-info"><i class="bi bi-award"></i></h3>
@@ -112,7 +112,7 @@
                         <p style="color: white">Frontend & Backend Development</p>
                     </div>
                 </div>
-            <!-- Education Card -->
+        <!-- Education Card -->
                 <div class="col-md-6 col-sm-12 text-center">
                     <div class="card border-info" style="border-radius: 15px">
                         <h3 class="mt-4 text-info"><i class="bi bi-book"></i></h3>
@@ -121,7 +121,7 @@
                         <p style="color: white">Diploma of Software Development (current)</p>
                     </div>
                 </div>
-            <!-- Descriptive text -->
+        <!-- Descriptive text -->
                 <div class="text-center col-12 mt-5 p-5">
                     <p class="fst-italic text-white lead">Based in South Auckland, I'm a developer passionate about building streamlined applications with user friendly design and innate functionality. 
                         I have a knack for design, UI/UX experience and logical problem solving. My point of difference is my interpersonal & leadership skills, and my ability to generate results under pressure. </p>
@@ -131,7 +131,7 @@
 
         <div class="container-fluid">
             <img src="./Images/down arrows modern purple.PNG" width="50" alt="Arrow icon" class="icon arrow ms-5 mt-5 mb-5" onclick="location.href='./#experience'">
-            <span class="text-white fst-italic">Explore Experience</span>
+            <span class="fst-italic">Explore Experience</span>
         </div>
         </section>
 
@@ -143,7 +143,7 @@
                 <p class="mb-1 lead">Explore my</p>
                 <h2>Experience</h2>
             </div>
-
+        <!-- Frontend experience card -->
         <div class="container">
             <div class="col-sm-12 col-md-12 text-center">
                 <div class="card border-info" style="border-radius: 15px">
@@ -156,7 +156,7 @@
                 </div>
             </div>
         </div>
-
+        <!-- Backend experience card -->
         <div class="container mt-5 mb-5">
             <div class=" col-sm-12 col-md-12 text-center">
                 <div class="card border-info" style="border-radius: 15px">
@@ -171,12 +171,18 @@
         </div>
 
         <div class="container-fluid">
-            <img src="./Images/down arrows modern purple.PNG" width="50" alt="Arrow icon" class="icon arrow mt-5 ms-5 mb-5" onclick="location.href='./#experience'">
-            <span class="text-white fst-italic">Browse Projects</span>
+            <img src="./Images/down arrows modern purple.PNG" width="50" alt="Arrow icon" class="icon arrow mt-5 ms-5 mb-5" onclick="location.href='./#projects'">
+            <span class="fst-italic">Browse Projects</span>
         </div>
         </section>
 
         <div class="col-xs-12" style="height:200px;">
+        </div>
+        <!-- Projects section -->
+         <section id="projects">
+         </section>
+
+         <div class="col-xs-12" style="height:200px;">
         </div>
         </main>
         <footer>
