--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </header>
 
         <main>
-        <!-- Hero section with profile image (REPLACE WITH GENUINE IMAGE)-->
+        <!-- Hero section with profile card (REPLACE WITH GENUINE IMAGE)-->
         <section id="Profile">
             <div class="container">
 
@@ -94,7 +94,7 @@
         <div class="col-xs-12" style="height:200px;">
         </div>
 
-        <!-- About me section -->
+        <!-- About me section (COMPLETED) -->
         <section id="about">
             <div class="container text-center mb-5 pb-5">
                 <p class="mb-1 lead">Get to know</p>
@@ -137,7 +137,7 @@
 
         <div class="col-xs-12" style="height:200px;">
         </div>
-        <!-- Experience section -->
+        <!-- Experience section (COMPLETED) -->
         <section id="experience">
             <div class="container text-center mb-5 pb-5">
                 <p class="mb-1 lead">Explore my</p>
@@ -180,6 +180,32 @@
         </div>
         <!-- Projects section -->
          <section id="projects">
+            <div class="container text-center mb-5 pb-5">
+                <p class="mb-1 lead">Browse my</p>
+                <h2>Projects</h2>
+            </div>
+
+            <div class="container">
+            <div class="row gy-5">
+        <!-- Pet Paradise -->
+                <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12" style="border-radius: 15px">
+                    <div class="card d-flex justify-content-end" style="
+                    background-image: url('./Images/pet\ paradise\ snip\ opaque\ darkest.PNG');
+                    background-size: cover;
+                    height: 400px;">
+                        <h4 class="ms-5 fst-italic fw-bold">Pet Paradise Webstore</h5>
+                        <p class="mb-1 ms-5" style="color: white">HTML - CSS - Bootstrap</p>
+                        <p class="mb-5 ms-5" style="color: white">Frontend & Backend Development</p>
+                    </div>
+                </div>
+        <!-- Sweet As Sound -->
+                <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 text-center" style="border-radius: 15px">
+                    <div class="card">
+                        <h5 class="mb-4">Project 2</h5>
+                        <p class="mb-1" style="color: white">ormation Sciences</p>
+                        <p style="color: white">velopment</p>
+                    </div>
+                </div>
          </section>
 
          <div class="col-xs-12" style="height:200px;">
