--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
                     <h2 class="card-title mb-3" style="color: white">Sione Yerkovich</h2>
                     <h5 class="card-title mb-5 text-primary">Student Developer</h5>
                     <button type="button" class="btn btn-info btn-lg me-3">Download CV</button>
-                    <button type="button" class="btn btn- btn-outline-info btn-lg text-white">Contact Me</button>
+                    <button type="button" class="btn btn-outline-info btn-lg text-white">Contact Me</button>
         <!-- ATTENTION. MUST ADD HREF TO LINKS BELOW -->
                       <div>
                         <a href="#" target="_blank"><btn type="button" class="text-white mt-3 ms-4 me-4" style="font-size: 2rem" alt="LinkedIn link icon">
@@ -179,7 +179,7 @@
         <div class="col-xs-12" style="height:200px;">
         </div>
         <!-- Projects section -->
-         <section id="projects">
+        <section id="projects">
             <div class="container text-center mb-5 pb-5">
                 <p class="mb-1 lead">Browse my</p>
                 <h2>Projects</h2>
@@ -192,23 +192,53 @@
                     <div class="card d-flex justify-content-end" style="
                     background-image: url('./Images/pet\ paradise\ snip\ opaque\ darkest.PNG');
                     background-size: cover;
-                    height: 400px;">
-                        <h4 class="ms-5 fst-italic fw-bold">Pet Paradise Webstore</h5>
-                        <p class="mb-1 ms-5" style="color: white">HTML - CSS - Bootstrap</p>
-                        <p class="mb-5 ms-5" style="color: white">Frontend & Backend Development</p>
+                    height: 350px;
+                    border-radius: 15px;">
+                        <div>
+                            <h4 class="ms-5 fst-italic fw-bold">Pet Paradise Webstore</h5>
+                            <p class="ms-5 mb-0 text-primary fw-bold">HTML | CSS | Bootstrap</p>
+                            <p class="ms-5 mb-0 mt-1 fst-italic lead" style="color: white;">Frontend project</p>
+                                    <button type="button" class="btn btn-info ms-5 mb-4 mt-3">Github</button>
+                                    <button type="button" class="btn btn-info ms-1 mb-4 mt-3 text-white text-nowrap">Try it</button>
+                        </div>
+                    </div>
+                </div>
+        <!-- Quicksilver -->
+                <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
+                    <div class="card d-flex justify-content-end" style="
+                    background-image: url('./Images/Quicksilver\ snip\ opaque.PNG');
+                    background-size: cover;
+                    height: 350px;
+                    border-radius: 15px;">
+                        <div>
+                            <h4 class="ms-5 fst-italic fw-bold">Quicksilver</h5>
+                            <p class="ms-5 mb-0 text-primary fw-bold">.NET | C#</p>
+                            <p class="ms-5 mb-0 mt-1 fst-italic lead" style="color: white;">Frontend / Backend</p>
+                                    <button type="button" class="btn btn-info ms-5 mb-4 mt-3">Github</button>
+                                    <button type="button" class="btn btn-info ms-1 mb-4 mt-3 text-white text-nowrap">Try it</button>
+                        </div>
                     </div>
                 </div>
         <!-- Sweet As Sound -->
-                <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12 text-center" style="border-radius: 15px">
-                    <div class="card">
-                        <h5 class="mb-4">Project 2</h5>
-                        <p class="mb-1" style="color: white">ormation Sciences</p>
-                        <p style="color: white">velopment</p>
-                    </div>
+        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12" style="border-radius: 15px">
+            <div class="card d-flex justify-content-end" style="
+            background-image: url('./Images/pet\ paradise\ snip\ opaque\ darkest.PNG');
+            background-size: cover;
+            height: 350px;
+            border-radius: 15px;">
+                <div>
+                    <h4 class="ms-5 fst-italic fw-bold">Sweet As Sound</h5>
+                    <p class="ms-5 mb-0 text-primary fw-bold">.NET | C# | SQL</p>
+                    <p class="ms-5 mb-0 mt-1 fst-italic lead" style="color: white;">Frontend / Backend</p>
+                            <button type="button" class="btn btn-info ms-5 mb-4 mt-3">Github</button>
+                            <button type="button" class="btn btn-info ms-1 mb-4 mt-3 text-white text-nowrap">Try it</button>
                 </div>
-         </section>
-
-         <div class="col-xs-12" style="height:200px;">
+            </div>
+        </div>
+        </section>
+        <div class="container-fluid mt-5">
+            <img src="./Images/down arrows modern purple.PNG" width="50" alt="Arrow icon" class="icon arrow mt-5 ms-5 mb-5" onclick="location.href='./#projects'">
+            <span class="fst-italic">Contact Me</span>
         </div>
         </main>
         <footer>
