--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
             <div class="row gy-5">
         <!-- Pet Paradise -->
                 <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12" style="border-radius: 15px">
-                    <div class="card d-flex justify-content-end" style="
+                    <div class="card d-flex justify-content-end border-light border-end-0 border-top-0 border-start-0" style="
                     background-image: url('./Images/pet\ paradise\ snip\ opaque\ darkest.PNG');
                     background-size: cover;
                     height: 350px;
@@ -206,12 +206,12 @@
         <!-- Quicksilver -->
                 <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
                     <div class="card d-flex justify-content-end" style="
-                    background-image: url('./Images/Quicksilver\ snip\ opaque.PNG');
+                    background-image: url('./Images/Quiksilver\ opaque.png');
                     background-size: cover;
                     height: 350px;
                     border-radius: 15px;">
                         <div>
-                            <h4 class="ms-5 fst-italic fw-bold">Quicksilver</h5>
+                            <h4 class="ms-5 fst-italic fw-bold">Quiksilver</h5>
                             <p class="ms-5 mb-0 text-primary fw-bold">.NET | C#</p>
                             <p class="ms-5 mb-0 mt-1 fst-italic lead" style="color: white;">Frontend / Backend</p>
                                     <button type="button" class="btn btn-info ms-5 mb-4 mt-3">Github</button>
@@ -221,10 +221,10 @@
                 </div>
         <!-- Sweet As Sound -->
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12" style="border-radius: 15px">
-            <div class="card d-flex justify-content-end" style="
-            background-image: url('./Images/pet\ paradise\ snip\ opaque\ darkest.PNG');
+            <div class="card d-flex justify-content-end border-light border-end-0 border-top-0 border-bottom-0" style="
+            background-image: url('./Images/Untitled\ design\ \(1\).png');
             background-size: cover;
-            height: 350px;
+            height: 300px;
             border-radius: 15px;">
                 <div>
                     <h4 class="ms-5 fst-italic fw-bold">Sweet As Sound</h5>
