--- a/index.html
+++ b/index.html
@@ -149,9 +149,9 @@
                 <div class="card border-info" style="border-radius: 15px">
                     <h5 class="mb-4 mt-4 pb-sm-4">Frontend Development</h5>
                         <div class="row mb-5 gy-5">
-                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-info me-2"></i>Bootstrap</h5>
-                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-info me-2"></i>HTML</h5>
-                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-info me-2"></i>CSS</h5>
+                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>Bootstrap</h5>
+                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>HTML</h5>
+                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>CSS</h5>
                         </div>
                 </div>
             </div>
@@ -162,9 +162,9 @@
                 <div class="card border-info" style="border-radius: 15px">
                     <h5 class="mb-4 mt-4 pb-sm-4">Backend Development</h5>
                         <div class="row mb-5 gy-5">
-                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-info me-2"></i>C#</h5>
-                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-info me-2"></i>SQL</h5>
-                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-info me-2"></i>.NET</h5>
+                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>C#</h5>
+                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>SQL</h5>
+                            <h5 class="mb-1 col-sm-12 col-md-4" style="color: white"><i class="bi bi-check2-circle text-primary me-2"></i>.NET</h5>
                         </div>
                 </div>
             </div>
