--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
         <!-- About me section (COMPLETED) -->
         <section id="about">
             <div class="container text-center mb-5 pb-5">
-                <p class="mb-1 lead">Get to know</p>
+                <p class="mb-1 lead">Pēwhea</p>
                 <h2>About Me</h2>
             </div>
 
@@ -108,8 +108,9 @@
                     <div class="card border-info" style="border-radius: 15px">
                         <h3 class="mt-4 text-info"><i class="bi bi-award"></i></h3>
                         <h5 class="mb-4">Experience</h5>
-                        <p class="mb-1" style="color: white">2 Years</p>
-                        <p style="color: white">Frontend & Backend Development</p>
+                        <p class="mb-1" style="color: white">Frontend & Backend Development</p>
+                        <p class="mb-1" style="color: white">Project Management & SDLC</p>
+                        <p style="color: white">Data Modelling and Normalization</p>
                     </div>
                 </div>
         <!-- Education Card -->
@@ -118,7 +119,7 @@
                         <h3 class="mt-4 text-info"><i class="bi bi-book"></i></h3>
                         <h5 class="mb-4">Education</h5>
                         <p class="mb-1" style="color: white">Diploma of Information Sciences</p>
-                        <p style="color: white">Diploma of Software Development (current)</p>
+                        <p style="color: white; height: 52px">Diploma of Software Development (current)</p>
                     </div>
                 </div>
         <!-- Descriptive text -->
@@ -140,7 +141,7 @@
         <!-- Experience section (COMPLETED) -->
         <section id="experience">
             <div class="container text-center mb-5 pb-5">
-                <p class="mb-1 lead">Explore my</p>
+                <p class="mb-1 lead">Tūmahi wheako</p>
                 <h2>Experience</h2>
             </div>
         <!-- Frontend experience card -->
@@ -181,7 +182,7 @@
         <!-- Projects section -->
         <section id="projects">
             <div class="container text-center mb-5 pb-5">
-                <p class="mb-1 lead">Browse my</p>
+                <p class="mb-1 lead">Waitara</p>
                 <h2>Projects</h2>
             </div>
 
@@ -202,6 +203,9 @@
                                     <button type="button" class="btn btn-info ms-1 mb-4 mt-3 text-white text-nowrap">Try it</button>
                         </div>
                     </div>
+                    <div class="container">
+                        <p class="mx-4 mt-3 text-white text-center">A static e-commerce website I developed using many of the latest HTML5 and Bootstrap 5 features such as cards, carousel & new utilities with CSS styling properties.</p>
+                    </div>
                 </div>
         <!-- Quicksilver -->
                 <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
@@ -218,6 +222,9 @@
                                     <button type="button" class="btn btn-info ms-1 mb-4 mt-3 text-white text-nowrap">Try it</button>
                         </div>
                     </div>
+                    <div class="container">
+                        <p class="mt-3 text-white text-center">A Windows Form App I developed as a quick, reliable registration system. Built utilizing .NET built-in styling and C# logic.</p>
+                    </div>
                 </div>
         <!-- Sweet As Sound -->
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12" style="border-radius: 15px">
@@ -233,6 +240,9 @@
                             <button type="button" class="btn btn-info ms-5 mb-4 mt-3">Github</button>
                             <button type="button" class="btn btn-info ms-1 mb-4 mt-3 text-white text-nowrap">Try it</button>
                 </div>
+            </div>
+            <div class="container">
+                <p class="mx-4 mt-3 text-white text-center">This project was developed using .NET built-in styling, C# logic, SQL databases and EFCore to manipulate data. It functions as a media player; requiring a user to register while passing validation checks. Supports external accessibility.</p>
             </div>
         </div>
         </section>
