--- a/index.html
+++ b/index.html
@@ -250,6 +250,28 @@
             <img src="./Images/down arrows modern purple.PNG" width="50" alt="Arrow icon" class="icon arrow mt-5 ms-5 mb-5" onclick="location.href='./#projects'">
             <span class="fst-italic">Contact Me</span>
         </div>
+
+        <div class="col-xs-12" style="height:200px;">
+        </div>
+        <!-- Contact Me Section -->
+        <section id="contact">
+                <div class="container text-center mb-5 pb-5">
+                    <p class="mb-1 lead">Whakapā</p>
+                    <h2>Contact Me</h2>
+                </div>
+            <div class="container">
+                <div class="row gy-5">
+            <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
+
+            </div>
+            <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12" style="border-radius: 15px">
+
+            </div>
+
+
+            </div>
+            </div>
+        </section>
         </main>
         <footer>
             <!-- place footer here -->
