--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
         </div>
         </section>
         <div class="container-fluid mt-5">
-            <img src="./Images/down arrows modern purple.PNG" width="50" alt="Arrow icon" class="icon arrow mt-5 ms-5 mb-5" onclick="location.href='./#projects'">
+            <img src="./Images/down arrows modern purple.PNG" width="50" alt="Arrow icon" class="icon arrow mt-5 ms-5 mb-5" onclick="location.href='./#contact'">
             <span class="fst-italic">Contact Me</span>
         </div>
 
@@ -255,26 +255,71 @@
         </div>
         <!-- Contact Me Section -->
         <section id="contact">
-                <div class="container text-center mb-5 pb-5">
-                    <p class="mb-1 lead">Whakapā</p>
-                    <h2>Contact Me</h2>
-                </div>
+        <!-- First section half -->
             <div class="container">
-                <div class="row gy-5">
-            <div class="col-xl-4 col-lg-4 col-md-12 col-sm-12">
+            <div class="row gy-5">
+                <div class="col-xl-8 col-lg-8 col-md-7 col-sm-12">
+                    <h2>Let's talk.<br>I love opportunities to grow.</h5>
+                    <p class="mb-5 fst-italic">It's my chance to change the world.</p>
+                    <div class="d-flex align-items-center">
+                        <i class="bi bi-phone-vibrate me-3 text-info h3"></i>
+                        <h5 class="text-white">021 716 202</h5>
+                    </div>
+                    <div class="col-xs-12" style="height:20px;">
+                    </div>
+                    <div class="d-flex align-items-center">
+                        <i class="bi bi-envelope-at-fill me-3 text-info h4"></i>
+                        <h5 class="text-white">sioneyerkovich01@gmail.com</h5>
+                    </div>
+                </div>
+                <!-- Second section half -->
+                <div class="pt-4 col-xl-4 col-lg-4 col-md-5 col-sm-12">
+                        <label class="form-label">Send me a message</label>
+                        <div class="form-floating mb-4">
+                          <input type="Name" class="form-control" id="UserName" placeholder="John Smith">
+                          <label for="UserName">Your name</label>
+                        </div>
+                        <div class="form-floating mb-4">
+                          <input type="email" class="form-control" id="UserEmailAddress" placeholder="email@website.com" autocomplete="off">
+                          <label for="UserEmailAddress">Your email address</label>
+                        </div>
+                        <div class="form-floating">
+                            <textarea class="form-control" id="UserMessage" placeholder="Hi, can we arrange a meeting?"></textarea>
+                            <label class="form-label" for="UserMessage">Message</label>
+                        </div>
+                        <button type="button" class="btn btn-info mt-3">Send</button>
+                </div>
+
 
             </div>
-            <div class="col-xl-8 col-lg-8 col-md-12 col-sm-12" style="border-radius: 15px">
-
             </div>
 
-
-            </div>
+            <div class="col-xs-12" style="height:200px;">
             </div>
         </section>
         </main>
         <footer>
-            <!-- place footer here -->
+            <!-- footer here -->
+            <div class="col-xs-12" style="height:100px;">
+            </div>
+  
+          <div class="text-center">
+            <btn type="button" href="3"><img src="./Images/yerkovich logo.PNG" class="img-fluid" width="170" alt="Yerkovich Logo"></btn>
+            <div class="text-center mb-3 mt-3">
+              <a href="https://www.instagram.com/" target="_blank"><btn type="button" class="text-black me-4" style="font-size: 2rem" alt="Instagram link icon">
+                <i class="bi bi-linkedin text-white"><span class="visually-hidden">Instagram Icon</span></i>
+              </a>
+              </btn>
+              <a href="https://x.com/?lang=en" target="_blank"><btn type="button" class="text-black" style="font-size: 2rem" alt="Twitter link icon">
+                <i class="bi bi-github text-white"><span class="visually-hidden">Twitter Icon</span></i>
+              </a>
+              </btn>
+            </div>
+          </div>
+  
+          <div class="text-center p-3">
+            © 2024 Copyright: Sione Yerkovich. All rights Reserved.
+          </div>
         </footer>
         <!-- Bootstrap JavaScript Libraries -->
         <script
