--- a/index.html
+++ b/index.html
@@ -300,10 +300,10 @@
         </main>
         <footer>
             <!-- footer here -->
-            <div class="col-xs-12" style="height:100px;">
+            <div class="col-xs-12 border-top border-secondary" style="height:1px;">
             </div>
   
-          <div class="text-center">
+          <div class="text-center mt-3">
             <btn type="button" href="3"><img src="./Images/yerkovich logo.PNG" class="img-fluid" width="170" alt="Yerkovich Logo"></btn>
             <div class="text-center mb-3 mt-3">
               <a href="https://www.instagram.com/" target="_blank"><btn type="button" class="text-black me-4" style="font-size: 2rem" alt="Instagram link icon">
