--- a/index.html
+++ b/index.html
@@ -27,24 +27,24 @@
         <!-- navbar here (COMPLETED) -->
             <nav class="navbar bg-body-light navbar-expand-md border-bottom border-secondary my-2" data-bs-theme="dark" aria-label="navigation bar">
                 <div class="container-fluid mb-3">
-                    <a class="navbar-brand ms-5" href="#"><img src="../Images/yerkovich logo.PNG" class="img-fluid" width="170" alt="Yerkovich Logo"></a>
+                    <a class="navbar-brand ms-5" onclick="location.href='./#profile'"><img src="../Images/yerkovich logo.PNG" class="img-fluid" width="170" alt="Yerkovich Logo"></a>
                     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse bg-light ms-5 mt-2" id="navbarColor01">
                         <ul class="navbar-nav">
                             <li class="nav-item me-3 mb-1">
-                                <a class="nav-link bold-text" href="index.html">About Me
+                                <a class="nav-link bold-text" onclick="location.href='./#about'">About Me
                                 </a>
                             </li>
                             <li class="nav-item me-3 mb-1">
-                                <a class="nav-link bold-text" href="#">Experience</a>
+                                <a class="nav-link bold-text" onclick="location.href='./#experience'">Experience</a>
                             </li>
                             <li class="nav-item me-3 mb-1">
-                                <a class="nav-link bold-text" href="#">Projects</a>
+                                <a class="nav-link bold-text" onclick="location.href='./#projects'">Projects</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link bold-text" href="#">Contact Me</a>
+                                <a class="nav-link bold-text" onclick="location.href='./#contact'">Contact Me</a>
                             </li>
 
                         </ul>
@@ -55,7 +55,7 @@
 
         <main>
         <!-- Hero section with profile card (REPLACE WITH GENUINE IMAGE)-->
-        <section id="Profile">
+        <section id="profile">
             <div class="container">
 
                 <div class="col-xs-12" style="height:100px;">
@@ -71,15 +71,15 @@
                   <div class="card-body pt-4 mt-5">
                     <h2 class="card-title mb-3" style="color: white">Sione Yerkovich</h2>
                     <h5 class="card-title mb-5 text-primary">Student Developer</h5>
-                    <button type="button" class="btn btn-info btn-lg me-3">Download CV</button>
-                    <button type="button" class="btn btn-outline-info btn-lg text-white">Contact Me</button>
+                    <a href="./Sione Yerkovich CV - 2024.pdf" download="Sione Yerkovich CV"><button type="button" class="btn btn-info btn-lg me-3">Download CV</button></a>
+                    <button type="button" class="btn btn-outline-info btn-lg text-white" onclick="location.href='./#contact'">Contact Me</button>
         <!-- ATTENTION. MUST ADD HREF TO LINKS BELOW -->
                       <div>
-                        <a href="#" target="_blank"><btn type="button" class="text-white mt-3 ms-4 me-4" style="font-size: 2rem" alt="LinkedIn link icon">
-                          <i class="bi bi-linkedin"><span class="visually-hidden">Facebook Icon</span></i>
+                        <a href="https://github.com/YerkoBizerkohttps://www.linkedin.com/in/sione-yerkovich-38239b191/?originalSubdomain=nz" target="_blank"><btn type="button" class="text-white mt-3 ms-4 me-4" style="font-size: 2rem" alt="LinkedIn link icon">
+                          <i class="bi bi-linkedin"><span class="visually-hidden">LinkedIn Icon</span></i>
                         </a>
-                        <a href="#" target="_blank"><btn type="button" class="text-white" style="font-size: 2rem" alt="Github link icon">
-                          <i class="bi bi-github"><span class="visually-hidden">Instagram Icon</span></i>
+                        <a href="https://github.com/YerkoBizerko" target="_blank"><btn type="button" class="text-white" style="font-size: 2rem" alt="Github link icon">
+                          <i class="bi bi-github"><span class="visually-hidden">Github Icon</span></i>
                         </a>
                       </div>
                   </div>
@@ -124,7 +124,7 @@
                 </div>
         <!-- Descriptive text -->
                 <div class="text-center col-12 mt-5 p-5">
-                    <p class="fst-italic text-white lead">Based in South Auckland, I'm a developer passionate about building streamlined applications with user friendly design and innate functionality. 
+                    <p class="fst-italic text-white lead">I'm a developer passionate about building streamlined applications with user friendly design and innate functionality. 
                         I have a knack for design, UI/UX experience and logical problem solving. My point of difference is my interpersonal & leadership skills, and my ability to generate results under pressure. </p>
                 </div>
             </div>
@@ -274,20 +274,22 @@
                 </div>
                 <!-- Second section half -->
                 <div class="pt-4 col-xl-4 col-lg-4 col-md-5 col-sm-12">
-                        <label class="form-label">Send me a message</label>
+                    <label class="form-label">Send me a message</label>
+                    <form action="https://formspree.io/f/mgveznlv" method="POST">
                         <div class="form-floating mb-4">
-                          <input type="Name" class="form-control" id="UserName" placeholder="John Smith">
+                          <input type="Name" name="Full Name" class="form-control" id="UserName" placeholder="John Smith" required>
                           <label for="UserName">Your name</label>
                         </div>
                         <div class="form-floating mb-4">
-                          <input type="email" class="form-control" id="UserEmailAddress" placeholder="email@website.com" autocomplete="off">
+                          <input type="email" name="Email address" class="form-control" id="UserEmailAddress" placeholder="email@website.com" autocomplete="off" required>
                           <label for="UserEmailAddress">Your email address</label>
                         </div>
                         <div class="form-floating">
-                            <textarea class="form-control" id="UserMessage" placeholder="Hi, can we arrange a meeting?"></textarea>
+                            <textarea class="form-control" name="Message" id="UserMessage" placeholder="Hi, can we arrange a meeting?" required></textarea>
                             <label class="form-label" for="UserMessage">Message</label>
                         </div>
-                        <button type="button" class="btn btn-info mt-3">Send</button>
+                        <button type="submit" class="btn btn-info mt-3">Send</button>
+                    </form>
                 </div>
 
 
@@ -304,14 +306,14 @@
             </div>
   
           <div class="text-center mt-3">
-            <btn type="button" href="3"><img src="./Images/yerkovich logo.PNG" class="img-fluid" width="170" alt="Yerkovich Logo"></btn>
+            <btn type="button" onclick="location.href='./#profile'"><img src="./Images/yerkovich logo.PNG" class="img-fluid" width="170" alt="Yerkovich Logo"></btn>
             <div class="text-center mb-3 mt-3">
-              <a href="https://www.instagram.com/" target="_blank"><btn type="button" class="text-black me-4" style="font-size: 2rem" alt="Instagram link icon">
-                <i class="bi bi-linkedin text-white"><span class="visually-hidden">Instagram Icon</span></i>
+              <a href="https://www.linkedin.com/in/sione-yerkovich-38239b191/?originalSubdomain=nz" target="_blank"><btn type="button" class="text-black me-4" style="font-size: 2rem" alt="LinkedIn link icon">
+                <i class="bi bi-linkedin text-white"><span class="visually-hidden">LinkedIn Icon</span></i>
               </a>
               </btn>
-              <a href="https://x.com/?lang=en" target="_blank"><btn type="button" class="text-black" style="font-size: 2rem" alt="Twitter link icon">
-                <i class="bi bi-github text-white"><span class="visually-hidden">Twitter Icon</span></i>
+              <a href="https://github.com/YerkoBizerko" target="_blank"><btn type="button" class="text-black" style="font-size: 2rem" alt="Github link icon">
+                <i class="bi bi-github text-white"><span class="visually-hidden">Github Icon</span></i>
               </a>
               </btn>
             </div>
