--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                   <div class="ms-lg-5 row g-0">
         <!-- Profile card -->
                     <div class="col-12 col-xs-12 col-sm-12 col-md-6 col-lg-5 col-xl-5">
-                    <img src="../Images/Portfolio test image.jpg" alt="Profile Picture" class="card-img-top" style="border-radius: 1000px">
+                        <img src="../Images/Portfolio test image.jpg" alt="Profile Picture" class="card-img-top" style="border-radius: 1000px">
                     </div>
                 <div class="pt-xxl-5 col-12 col-xs-12 col-sm-12 col-md-6 col-lg-7 col-xl-7 text-center">
                   <div class="card-body pt-4 mt-5">
@@ -107,7 +107,7 @@
                 <div class="col-md-6 col-sm-12 text-center">
                     <div class="card border-info" style="border-radius: 15px">
                         <h3 class="mt-4 text-info"><i class="bi bi-award"></i></h3>
-                        <h5 class="mb-5">Experience</h5>
+                        <h5 class="mb-4">Experience</h5>
                         <p class="mb-3" style="color: white">Frontend & Backend Development</p>
                         <p class="mb-3" style="color: white">Project Management & SDLC</p>
                         <p style="color: white">Data Modelling and Normalization</p>
@@ -117,7 +117,7 @@
                 <div class="col-md-6 col-sm-12 text-center">
                     <div class="card border-info" style="border-radius: 15px">
                         <h3 class="mt-4 text-info"><i class="bi bi-book"></i></h3>
-                        <h5 class="mb-5">Education</h5>
+                        <h5 class="mb-4">Education</h5>
                         <p class="mb-3" style="color: white">Diploma of Information Systems</p>
                         <p style="color: white; height: 62px">Diploma of Software Development (current)</p>
                     </div>
@@ -129,8 +129,7 @@
                 <h5 class="mb-4">Additional Skills</h5>
                 <p class="mb-3" style="color: white">Design Principles</p>
                 <p class="mb-3" style="color: white">Source/Version Control</p>
-                <p class="mb-3" style="color: white">Workflow optimization</p>
-                <p style="color: white; height: 62px">Development testing</p>
+                <p style="color: white; height: 62px">Development Testing</p>
                 
             </div>
         </div>
@@ -229,7 +228,7 @@
                         <p class="mt-3 text-white text-center">A Windows Form App I developed as a quick and reliable visitor registration system. Built utilizing .NET built-in styling and C# logic.</p>
                     </div>
                 </div>
-        <!-- Sweet As Sound -->
+        <!-- Sanctuary of Sound -->
         <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12" style="border-radius: 15px">
             <div class="card d-flex justify-content-end border-light border-end-0 border-top-0 border-bottom-0" style="
             background-image: url('./Images/Untitled\ design\ \(3).png');
@@ -240,8 +239,8 @@
                     <h4 class="ms-5 fst-italic fw-bold">Sanctuary of Sound</h5>
                     <p class="ms-5 mb-0 text-primary fw-bold">.NET | C# | SQL</p>
                     <p class="ms-5 mb-0 mt-1 fst-italic lead" style="color: white;">Frontend / Backend</p>
-                            <button type="button" class="btn btn-info ms-5 mb-4 mt-3">Github</button>
-                            <button type="button" class="btn btn-info ms-1 mb-4 mt-3 text-white text-nowrap">Try it</button>
+                            <a href="https://github.com/YerkoBizerko/Music-application" target="new"><button type="button" class="btn btn-info ms-5 mb-4 mt-3">Github</button></a>
+                            <a href="Sanctuary of sound.html" target="new"><button type="button" class="btn btn-info ms-1 mb-4 mt-3 text-white text-nowrap">Try it</button></a>
                 </div>
             </div>
             <div class="container">
